{
    "name": "InputManager",
    "maps": [
        {
            "name": "PS5",
            "id": "0274a586-481e-4a78-aa0a-b077edfee07f",
            "actions": [
                {
                    "name": "Circle",
                    "type": "Button",
                    "id": "834b2c6f-307b-4c82-95fd-153a761dbd8c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Square",
                    "type": "Button",
                    "id": "d2b6ae99-0acf-4854-b210-165f190dbe41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Triangle",
                    "type": "Button",
                    "id": "50d95119-9500-4c63-866f-bc2e248c079a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cross",
                    "type": "Button",
                    "id": "369c71d6-ff2b-44f4-a8aa-6cfd44e79383",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_Up",
                    "type": "Button",
                    "id": "383e2f31-63a3-44d1-88e6-ec73d4c260aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_Down",
                    "type": "Button",
                    "id": "28b6c26e-1c03-43cc-8106-48f9b9a6ea64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_Left",
                    "type": "Button",
                    "id": "4a05e1ad-b988-4cb9-9c84-ddc30263708f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dpad_Right",
                    "type": "Button",
                    "id": "821b6a0a-1292-4b68-ad72-51f385f75a37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PsButton",
                    "type": "Button",
                    "id": "092d6a9c-07f1-4a61-a12e-fce9ec802b09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "496d668e-147c-40e4-8391-b3ae3ae2aa49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "0d9ad879-2471-47b5-a983-92fe6489b6ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mic",
                    "type": "Button",
                    "id": "7cae9120-449f-4d8b-aca9-4e005b28a66a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R1",
                    "type": "Button",
                    "id": "0b839515-c297-4d22-b1b0-90bd3f855c04",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L1",
                    "type": "Button",
                    "id": "c8d09d96-1a26-4622-920f-290867f2235f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R2",
                    "type": "Button",
                    "id": "f796b108-d7b7-49fc-bcae-c222a3db6950",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L2",
                    "type": "Button",
                    "id": "88579c5c-a160-4050-a031-846c7b94dd6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R3",
                    "type": "Button",
                    "id": "679121c6-a88a-4298-a437-62f15387c2ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L3",
                    "type": "Button",
                    "id": "9e7355a5-c859-49bc-9987-7952b8991ec9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RJoystick",
                    "type": "Value",
                    "id": "8d398800-460e-4640-81cf-06da061582eb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LJoystick",
                    "type": "Value",
                    "id": "4882fa0a-aaa4-4514-8ea7-ca3f53787df0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchpadButton",
                    "type": "Button",
                    "id": "73b36241-2eb2-4ec6-8681-eb8589bff250",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "927eeef2-6a9e-48a7-b251-675e5cfc208d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotation",
                    "type": "PassThrough",
                    "id": "c46a3de8-a55a-45d2-bb55-7b3fdd5766a4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetRot",
                    "type": "Button",
                    "id": "b7501349-98ed-4eda-b03d-f5035649fb56",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67b6b623-a1bd-4ebe-b3ca-91f4cf8f8528",
                    "path": "<DualSenseGamepadHID>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Circle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f45d7dc3-7705-477c-bb65-ff2d4c6e27ac",
                    "path": "<DualSenseGamepadHID>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Square",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cc60f95-3a0e-4a25-86ec-2ac2ec5a2070",
                    "path": "<DualSenseGamepadHID>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Triangle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59aa3d62-d2f4-4475-b4fe-0d590926eb5e",
                    "path": "<DualSenseGamepadHID>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Cross",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41d405f8-17da-40ef-afe1-50e32dcafa9a",
                    "path": "<DualSenseGamepadHID>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Dpad_Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c1fba74-ee8e-40ee-8bdd-0d20405dabfe",
                    "path": "<DualSenseGamepadHID>/systemButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "PsButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b29bf27a-2b1b-4b20-aa37-a9555adfb1f3",
                    "path": "<DualSenseGamepadHID>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c4572c3-7574-43a5-8f8e-4aad25d04458",
                    "path": "<DualSenseGamepadHID>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d764be85-ae61-4126-b275-81ef8c7cdc75",
                    "path": "<DualSenseGamepadHID>/micButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Mic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06fb173f-c395-44e3-a030-621b3f23768d",
                    "path": "<DualSenseGamepadHID>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "R2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54703b1e-6ad8-4e85-9493-6be1d2e16199",
                    "path": "<DualSenseGamepadHID>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "L3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31f37518-6ac9-4e26-bb88-30ee0c0898e7",
                    "path": "<DualSenseGamepadHID>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "R3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "803d718a-1866-421d-8875-11e0cb61de28",
                    "path": "<DualSenseGamepadHID>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "R1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e574c26-e993-4c14-a5ce-b06ba2ddcf40",
                    "path": "<DualSenseGamepadHID>/leftStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=10,y=10)",
                    "groups": "DualSense",
                    "action": "LJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c6a4c75-bfd5-45c4-b29d-d0b0adb8ac81",
                    "path": "<DualSenseGamepadHID>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=10,y=10)",
                    "groups": "DualSense",
                    "action": "RJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "658328f5-232d-428e-8909-826661d312b5",
                    "path": "<DualSenseGamepadHID>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "L1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a54f3111-2cfd-4a93-aa83-3d29a7b72a41",
                    "path": "<DualSenseGamepadHID>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "L2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0cd2e61-0865-4c63-86b7-dd282b895914",
                    "path": "<DualSenseGamepadHID>/touchpadButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "TouchpadButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74dc6bfc-1016-41a8-8f20-52cdb265a5ba",
                    "path": "<DualSenseGamepadHID>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Dpad_Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77fecc74-3330-4003-b495-681cb8e0721a",
                    "path": "<DualSenseGamepadHID>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Dpad_Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be3e4a19-5d0a-4ea9-bdb8-80d7d826a94e",
                    "path": "<DualSenseGamepadHID>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Dpad_Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53d57738-a65e-49a7-9e4b-f6611bf64587",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "DualSense",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "wasd",
                    "id": "40f57332-4b2a-4d37-8b40-0a5060241899",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6ecc51ee-8e91-4c0c-91d4-f3dd0e7f3ddf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "db325210-93da-46df-a7ae-bebd040dd927",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1b8439a9-72cd-4df7-87a6-e9404f88ba8f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2d795b34-1056-450a-bca2-bca1cf79ab4c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c42307fd-4ee9-4675-9962-907f5fd93825",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetRot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "DualSense",
            "bindingGroup": "DualSense",
            "devices": [
                {
                    "devicePath": "<DualSenseGamepadHID>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}